crates/compiler/cypress/tests/snapshots/test_parse__spaced_singleton_list_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "[1]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList Num=>Int@1 EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]

