crates/compiler/cypress/tests/snapshots/test_parse__str_block_multiple_newlines_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"\"\"\n\n\n#\"\"\"#\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"\"\"\n\n\n#\"\"\"")

[=== formatted below ===]

