crates/compiler/cypress/tests/snapshots/test_parse__string_without_escape_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"123 abc 456 def\"\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"123 abc 456 def\"")

[=== formatted below ===]

